client/scss/pages/_credits.scss
@use '../colors';

.page-content-credits {
    pointer-events: all;
    pointer-events: all;

    background-color: colors.$secondary-color-dark;
    color: colors.$main-color-light;
    border-radius: .4rem;

    margin: 5.5rem 0 5rem 0;
    height: calc(100% - 9.5rem);

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    overflow: hidden;
}

.credits-title {
    font-family: 'Vincendo';
    font-size: 2rem;
    text-align: center;
    padding: 1rem;
}

.credits-scrollbox {
    height: 100%;
    margin: 0 1rem 1rem 1rem;
}

.credits-spacer {
    height: 100%;
}

.credits-text {
    display: flex;
    flex-direction: column;
    gap: 2rem;
}

.credits-group-title {
    font-family: 'Vincendo';
    text-align: center;
    margin-bottom: 1rem;
}

.credits-group-maintitle {
    font-size: 1.5rem;
}

.credits-group-subtitle {
    font-size: 1rem;
}

.credits-content {
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: .4rem;
}

.credits-entry {
    display: flex;
    justify-content: center;
    gap: 1rem;
    width: 100%;
}

.credits-role {
    text-align: end;
    line-height: 1.1rem;
    width: calc(50% - .5rem);
    overflow-wrap: break-word;
}

.credits-name {
    width: calc(50% - .5rem);

    line-height: 1.1rem;
    display: flex;
    align-items: start;
    justify-content: space-between;
    overflow-wrap: break-word;
}

.credits-hyperlink {
    background-color: colors.$main-color-light;
    color: colors.$main-color-dark;
    flex-shrink: 0;

    border-radius: .3rem;
    height: 1.1rem;
    width: 1.1rem;
    margin-left: .2rem;

    &>svg {
        height: inherit;
        width: inherit;
    }
}

.credits-button-title {
    position: absolute;
    height: 2.5rem;
    bottom: 1rem;
    right: 1rem;

    display: flex;
    align-items: center;

    padding: 0 1rem;
    border-radius: .4rem;
    pointer-events: all;

    font-family: 'Vincendo';
    font-size: 1.2rem;
    text-transform: uppercase;
    color: colors.$main-color-light;
    background-color: colors.$secondary-color-dark;

    transform: scale(0);
    transition: transform .3s cubic-bezier(0.36, 0, 0.66, -0.56);

    &.pop {
        transform: scale(1);
        transition: transform .3s cubic-bezier(0.34, 1.56, 0.64, 1);
    }
}

